Bugfix for not showing reset secret due to double redirect

--- a/src/main/resources/static/css/application.css
+++ b/src/main/resources/static/css/application.css
@@ -317,7 +317,7 @@ form div.checkbox-element {
 .mod-flash .flash-notice {
   text-align: center;
   color: white;
-  margin-top: 10px;
+  margin-top: 42px;
   position: absolute;
   right: 50%;
   left: 50%;
