--- a/src/main/sass/modules/flash.sass
+++ b/src/main/sass/modules/flash.sass
@@ -2,7 +2,7 @@
   .flash-notice
     text-align: center
     color: white
-    margin-top: 10px
+    margin-top: 42px
     position: absolute
     right: 50%
     left: 50%
